# mkdocs-badges

./: .gitignore  .todos  LICENSE  MANIFEST.in  README.md  build-docs.sh  mkdocs.yml  mkdocs_test_standalone.yml  mypy.ini  pyproject.toml  requirements.in  requirements.txt  setup.cfg  vercel.json
docs/: badge-syntax.md  badge-types.md  badges.md  index.md  migration.md  preprocessor.md  setup.md  styling.md  test.md
docs/assets/stylesheets/: custom.css
docs/test/: basic-caret-separator.md  basic.md  inline-badges.md  install.md  invalid.md  issues.md  tags.md  theme.md
src/mkdocs_badges/: __init__.py  badge_handler.py  badge_html.py  badge_replacer.py  custom_badge.py  formatter.py  install_badge.py  link_badge.py  normal_badge.py  parsed_badge.py  parser.py  plugin.py  standalone_cli.py  tag_badge.py  utils.py
src/mkdocs_badges/assets/: __init__.py  badge.css  badge.js  install_badge_data.json
tests/: extra-install-badges.json  test_parser.py
