[metadata]
name = mkdocs-badges
version = 0.3.1
author = six-two
author_email = pip@six-two.dev
description = Add badges to your mkdocs page
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/six-two/mkdocs-badges
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.9
scripts =
install_requires =
    mkdocs>=1.2.0  

[options.entry_points]
mkdocs.plugins =
    badges = mkdocs_badges:BadgesPlugin

[options.packages.find]
where = src
